--- a/markdownConverterConsoleApp.Tests/markdownConverterConsoleApp.Tests.csproj
+++ b/markdownConverterConsoleApp.Tests/markdownConverterConsoleApp.Tests.csproj
@@ -18,4 +18,10 @@
   <ItemGroup>
     <ProjectReference Include="..\markdownConverterConsoleApp\markdownConverterConsoleApp.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Files\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Files\" />
+  </ItemGroup>
 </Project>
