--- a/markdownConverterConsoleApp/markdownConverterConsoleApp.csproj
+++ b/markdownConverterConsoleApp/markdownConverterConsoleApp.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Files\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Files\" />
+  </ItemGroup>
 </Project>
